@@ -28,6 +28,7 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+import com.google.gson.JsonPrimitive;
 import com.google.gson.reflect.TypeToken;
 
 import net.snowflake.client.jdbc.internal.apache.commons.io.FilenameUtils;
@@ -52,6 +53,11 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 
 	private static final Logger classLogger = LogManager.getLogger(AzureAISearchRestVectorDatabaseEngine.class);
 
+	public static final String AZURE_AI_SEARCH_VECTOR_ID = "id";
+	public static final String API_VERSION = "API_VERSION";
+	public static final String AZURE_AI_API_KEY = "api-key";
+	public static final String AZURE_API_VERSION = "api-version";
+	
 	public static final String INDEX_NAME = "INDEX_NAME";
 
 	private static final String TEXT_DATATYPE = "Edm.String";
@@ -97,12 +103,19 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		super.open(smssProp);
 
 		this.clusterUrl = this.smssProp.getProperty(Constants.HOSTNAME);
+		if (this.clusterUrl == null || (this.clusterUrl=this.clusterUrl.trim()).isEmpty()) {
+			classLogger.error("Hostname (Cluster URL) is required");
+			throw new IllegalArgumentException("Hostname (Cluster URL) is required");
+		}
 		this.apiKey = this.smssProp.getProperty(Constants.API_KEY);
-		this.apiVersion = this.smssProp.getProperty(Constants.API_VERSION);
+		this.apiVersion = this.smssProp.getProperty(API_VERSION);
+		if(this.apiVersion == null || (this.apiVersion=this.apiVersion.trim()).isEmpty()) {
+			this.apiVersion = "2024-07-01";
+		}
 		
-		if (this.apiKey == null || this.apiKey.trim().isEmpty() || this.apiVersion == null || this.apiVersion.trim().isEmpty()) {
-			classLogger.error("API Key or API Version is required");
-			throw new IllegalArgumentException("API Key or API Version is required");
+		if (this.apiKey == null || (this.apiKey=this.apiKey.trim()).isEmpty()) {
+			classLogger.error("API Key is required");
+			throw new IllegalArgumentException("API Key is required");
 		}
 		
 		this.indexName = this.smssProp.getProperty(INDEX_NAME);
@@ -168,7 +181,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		}
 
 		// we need to store our stuff
-		this.otherPropsToType.put(Constants.AZURE_AI_SEARCH_VECTOR_ID, TEXT_DATATYPE);
+		this.otherPropsToType.put(AZURE_AI_SEARCH_VECTOR_ID, TEXT_DATATYPE);
 		this.otherPropsToType.put(VectorDatabaseCSVTable.SOURCE, TEXT_DATATYPE);
 		this.otherPropsToType.put(VectorDatabaseCSVTable.MODALITY, TEXT_DATATYPE);
 		this.otherPropsToType.put(VectorDatabaseCSVTable.DIVIDER, TEXT_DATATYPE);
@@ -208,13 +221,13 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 					index = sourceId.get(source);
 					sourceId.put(source, index+1);
 				} else {
-					sourceId.put(source, new Integer(0));
+					sourceId.put(source, Integer.valueOf(0));
 				}
 
 				// store the actual index details
 				{
 					JsonObject record = new JsonObject();
-					record.addProperty(Constants.AZURE_AI_SEARCH_VECTOR_ID, this.sanitizeKey(source) + "_" + index);
+					record.addProperty(AZURE_AI_SEARCH_VECTOR_ID, this.sanitizeKey(source) + "_" + index);
 					record.addProperty(VectorDatabaseCSVTable.SOURCE, source);
 					record.addProperty(VectorDatabaseCSVTable.MODALITY, row.getModality());
 					record.addProperty(VectorDatabaseCSVTable.DIVIDER, row.getDivider());
@@ -230,7 +243,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 
 		String url = this.clusterUrl + "/" + BULK_ENDPOINT.replace("{{INDEX_NAME}}", this.indexName) + "?" + this.getMustQueryParamString();
 		Map<String, String> headersMap = new HashMap<>();
-		headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 		headersMap.put(HttpHeaders.CONTENT_TYPE, ContentType.APPLICATION_JSON.getMimeType());
 
 		String response = HttpHelperUtility.postRequestStringBody(url, headersMap, bulkInsert.toString(), ContentType.APPLICATION_JSON, null, null, null);
@@ -239,7 +252,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		}
 
 		Map<String, Object> responseMap = new Gson().fromJson(response, new TypeToken<Map<String, Object>>() {}.getType());
-		ArrayList<Object> insertions = (ArrayList<Object>) responseMap.get("value");
+		List<Object> insertions = (List<Object>) responseMap.get("value");
 		classLogger.info("Inserted " + insertions.size() + " bulk inserts (create index + record value) into azure ai search index " + this.indexName);
 
 		Boolean errors = (Boolean) responseMap.get("errors");
@@ -268,11 +281,11 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		
 		//Logic to retrieve Id's against all file names
 		JsonObject getIdRq = new JsonObject();
-		String searchArr= new String();
+		String searchArr = new String();
 		
 		//Get the file name and join it with comma and add to string ex: file1.pdf , file2.pdf , file3.pdf
-		searchArr=String.join(",", sourceNames);
-		getIdRq.addProperty("select", Constants.AZURE_AI_SEARCH_VECTOR_ID + "," + VectorDatabaseCSVTable.SOURCE);
+		searchArr = String.join(",", sourceNames);
+		getIdRq.addProperty("select", AZURE_AI_SEARCH_VECTOR_ID + "," + VectorDatabaseCSVTable.SOURCE);
 		getIdRq.addProperty("search", searchArr);
 		getIdRq.addProperty("searchFields", VectorDatabaseCSVTable.SOURCE);
 		getIdRq.addProperty("count",true);
@@ -283,7 +296,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		
 		
 		Map<String, String> headersMap = new HashMap<>();
-		headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 		headersMap.put(HttpHeaders.CONTENT_TYPE, "application/json");
 		
 		String responseSearchId = HttpHelperUtility.postRequestStringBody(url, headersMap, getIdRq.toString(),
@@ -314,7 +327,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 			JsonObject delRq = new JsonObject();
 			delRq.add("value",valueArr);
 			String urlDel = this.clusterUrl + "/" + DELETE_BY_QUERY_ENDPOINT.replace("{{INDEX_NAME}}", this.indexName)+ "?" + this.getMustQueryParamString();
-			headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+			headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 			headersMap.put(HttpHeaders.CONTENT_TYPE, "application/json");
 
 			String response = HttpHelperUtility.postRequestStringBody(urlDel, headersMap, delRq.toString(), ContentType.APPLICATION_JSON, null, null, null);
@@ -401,7 +414,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 
 		String url = this.clusterUrl + "/" + SEARCH_ENDPOINT.replace("{{INDEX_NAME}}", this.indexName) + "?" + this.getMustQueryParamString();
 		Map<String, String> headersMap = new HashMap<>();
-		headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 		headersMap.put(HttpHeaders.CONTENT_TYPE, "application/json");
 		
 		String response = HttpHelperUtility.postRequestStringBody(url, headersMap, search.toString(), ContentType.APPLICATION_JSON, null, null, null);
@@ -433,7 +446,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 				+ "?" + this.getMustQueryParamString();
  
 		Map<String, String> headersMap = new HashMap<>();
-		headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 		headersMap.put(HttpHeaders.CONTENT_TYPE, "application/json");
  
 		JsonObject search = new JsonObject();
@@ -478,6 +491,41 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		return returnSources;
 	}
 	
+	@Override
+	public List<Map<String, Object>> listAllRecords(Map<String, Object> parameters) {
+		String url = this.clusterUrl + "/" + SEARCH_ENDPOINT.replace("{{INDEX_NAME}}", this.indexName) + "?"
+				+ this.getMustQueryParamString();
+
+		Map<String, String> headersMap = new HashMap<>();
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(HttpHeaders.CONTENT_TYPE, "application/json");
+
+		JsonObject search = new JsonObject();
+		{
+			search.addProperty("search", "*");
+			search.addProperty("orderby", AZURE_AI_SEARCH_VECTOR_ID);
+		}
+		String response = HttpHelperUtility.postRequestStringBody(url, headersMap, search.toString(),
+				ContentType.APPLICATION_JSON, null, null, null);
+		JsonObject responseJson = JsonParser.parseString(response).getAsJsonObject();
+		JsonArray data = responseJson.getAsJsonArray("value");
+
+		List<Map<String, Object>> documentsList = new ArrayList<>();
+		for (JsonElement recordEle : data) {
+			JsonObject record = recordEle.getAsJsonObject();
+			Map<String, Object> document = new HashMap<>();
+			document.put(VectorDatabaseCSVTable.SOURCE, getJsonValue(record.get(VectorDatabaseCSVTable.SOURCE)));
+			document.put(VectorDatabaseCSVTable.MODALITY, getJsonValue(record.get(VectorDatabaseCSVTable.MODALITY)));
+			document.put(VectorDatabaseCSVTable.DIVIDER, getJsonValue(record.get(VectorDatabaseCSVTable.DIVIDER)));
+			document.put(VectorDatabaseCSVTable.PART, getJsonValue(record.get(VectorDatabaseCSVTable.PART)));
+			document.put(VectorDatabaseCSVTable.TOKENS, getJsonValue(record.get(VectorDatabaseCSVTable.TOKENS)));
+			document.put(VectorDatabaseCSVTable.CONTENT, getJsonValue(record.get(VectorDatabaseCSVTable.CONTENT)));
+			document.put(AZURE_AI_SEARCH_VECTOR_ID, getJsonValue(record.get(AZURE_AI_SEARCH_VECTOR_ID))); 
+			documentsList.add(document);
+		}
+		return documentsList;
+	}
+	
 	/**
 	 * 
 	 * @param responseObject
@@ -512,15 +560,12 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 	 * @return
 	 */
 	private Boolean doesIndexExsist(String specificIndexName) {
-		System.out.println("AZURE_AI_SEARCH :: Checking does index exists.");
 		String url = this.clusterUrl + "/" + DOES_INDEX_EXISTS.replace("{{INDEX_NAME}}", specificIndexName) + "?" + this.getMustQueryParamString() ;
-		System.out.println("AZURE_AI_SEARCH :: " + url);
 		Map<String, String> headersMap = new HashMap<>();
-		headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 		headersMap.put(HttpHeaders.CONTENT_TYPE, "application/json");
 		try {
 			HttpHelperUtility.getRequest(url, headersMap, null, null, null);
-			System.out.println("AZURE_AI_SEARCH :: Index already exists...");
 			return true;
 		} catch(Exception e) {
 			classLogger.error(Constants.STACKTRACE, e);
@@ -552,7 +597,7 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 					if (propType.equals(TEXT_DATATYPE)) {
 						field.addProperty("searchable", true);
 					}
-					if (propName.equals(Constants.AZURE_AI_SEARCH_VECTOR_ID)) {
+					if (propName.equals(AZURE_AI_SEARCH_VECTOR_ID)) {
 						field.addProperty("key", true);
 					}
 					if (propName.equals(this.embeddings)) {
@@ -609,10 +654,9 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 
 		String url = this.clusterUrl + "/" + CREATE_INDEX + "?" + this.getMustQueryParamString();
 		Map<String, String> headersMap = new HashMap<>();
-		headersMap.put(Constants.AZURE_AI_API_KEY, this.apiKey);
+		headersMap.put(AZURE_AI_API_KEY, this.apiKey);
 		headersMap.put(HttpHeaders.CONTENT_TYPE, ContentType.APPLICATION_JSON.getMimeType());
 		String response = HttpHelperUtility.postRequestStringBody(url, headersMap, createIndexJson.toString(), ContentType.APPLICATION_JSON, null, null, null);
-		System.out.println("AZURE_AI_search :: " + response);
 		if(!parseResponseForAcknowledged(response, specificIndexName)) {
 			throw new IllegalArgumentException("Did not receive an acknowledgement from the server for creating the index with the embeddings column");
 		}
@@ -636,6 +680,28 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 
 		return false;
 	}
+	
+	/**
+	 * Helper method to extract the correct type from JsonElement.
+	 * @param element
+	 * @return
+	 */
+	private Object getJsonValue(JsonElement element) {
+		if (element == null || element.isJsonNull()) {
+			return null;
+		} else if (element.isJsonPrimitive()) {
+			JsonPrimitive primitive = element.getAsJsonPrimitive();
+			if (primitive.isNumber()) {
+				return primitive.getAsInt(); 
+			} else if (primitive.isBoolean()) {
+				return primitive.getAsBoolean();
+			} else {
+				return primitive.getAsString();
+			}
+		} else {
+			return element.toString(); 
+		}
+	}
 
 	/**
 	 * 
@@ -651,12 +717,18 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 	}
 
 	@Override
+	protected String getDefaultDistanceMethod() {
+		// TODO Auto-generated method stub
+		return null;
+	}
+	
+	@Override
 	public VectorDatabaseTypeEnum getVectorDatabaseType() {
 		return VectorDatabaseTypeEnum.AZURE_AI_SEARCH;
 	}
 	
 	public String getMustQueryParamString () {
-		return Constants.AZURE_API_VERSION + "=" + this.apiVersion;
+		return AZURE_API_VERSION + "=" + this.apiVersion;
 	}
 
 	public String sanitizeKey(String key) {
@@ -666,14 +738,6 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
         return key.replaceAll(regex, "_");
     }
 
-	@Override
-	public List<Map<String, Object>> listAllRecords(Map<String, Object> parameters) {
-		// TODO Auto-generated method stub
-		return null;
-	}
-	
-	
-	
 //	FILTER HELPER FUNCTIONS
 	
 	public String processFilter(IQueryFilter queryFilter, String filterString) {
@@ -862,9 +926,4 @@ public class AzureAISearchRestVectorDatabaseEngine extends AbstractVectorDatabas
 		}
 	}
 
-	@Override
-	protected String getDefaultDistanceMethod() {
-		// TODO Auto-generated method stub
-		return null;
-	}
 }
